/*****************************************************************************
#                                                                            *
# Copyright 2023 Alexandre Huff                                              *
#                                                                            *
# Licensed under the Apache License, Version 2.0 (the "License");            *
# you may not use this file except in compliance with the License.           *
# You may obtain a copy of the License at                                    *
#                                                                            *
#      http://www.apache.org/licenses/LICENSE-2.0                            *
#                                                                            *
# Unless required by applicable law or agreed to in writing, software        *
# distributed under the License is distributed on an "AS IS" BASIS,          *
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.   *
# See the License for the specific language governing permissions and        *
# limitations under the License.                                             *
#                                                                            *
******************************************************************************/

#ifndef SERVICE_STYLE_HPP
#define SERVICE_STYLE_HPP

#include <string>
#include <memory>

#include "action_definition.hpp"
#include "trigger_definition.hpp"

class ServiceStyle {
public:
    ServiceStyle(int ric_style_type, std::string ric_style_name, std::shared_ptr<TriggerDefinition> trigger, std::shared_ptr<ActionDefinition> action) :
            ricStyleType(ric_style_type), ricStyleName(ric_style_name), triggerDefinition(trigger), actionDefinition(action) { };

    int getRicStyleType();
    std::string getRicStyleName();
    void setRicHeaderFormatType(int format);
    int getRicHeaderFormatType();
    void setRicMessageFormatType(int format);
    int getRicMessageFormatType();

    std::shared_ptr<ActionDefinition> const &getActionDefinition() const;
    std::shared_ptr<TriggerDefinition> const &getTriggerDefinition() const;

private:
    int ricStyleType;
    std::string ricStyleName;
    int ricHeaderFormatType;
    int ricMessageFormatType;

    std::shared_ptr<ActionDefinition> actionDefinition;
    std::shared_ptr<TriggerDefinition> triggerDefinition;

};

#endif