/*
 * Generated by asn1c-0.9.29 (http://lionet.info/asn1c)
 * From ASN.1 module "E2AP-PDU-Contents"
 * 	found in "e2ap-v02.02.03.asn1"
 * 	`asn1c -fcompound-names -findirect-choice -fincludes-quoted -fno-include-deps -gen-PER -no-gen-OER -no-gen-example`
 */

#ifndef	_ErrorIndication_H_
#define	_ErrorIndication_H_


#include "asn_application.h"

/* Including external dependencies */
#include "ProtocolIE-Container.h"
#include "constr_SEQUENCE.h"

#ifdef __cplusplus
extern "C" {
#endif

/* ErrorIndication */
typedef struct ErrorIndication {
	ProtocolIE_Container_2007P11_t	 protocolIEs;
	/*
	 * This type is extensible,
	 * possible extensions are below.
	 */
	
	/* Context for parsing across buffer boundaries */
	asn_struct_ctx_t _asn_ctx;
} ErrorIndication_t;

/* Implementation */
extern asn_TYPE_descriptor_t asn_DEF_ErrorIndication;
extern asn_SEQUENCE_specifics_t asn_SPC_ErrorIndication_specs_1;
extern asn_TYPE_member_t asn_MBR_ErrorIndication_1[1];

#ifdef __cplusplus
}
#endif

#endif	/* _ErrorIndication_H_ */
#include "asn_internal.h"
